GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/Business_Lounge_Record__c.object-meta.xml
<CustomObject>
    <label>Business Lounge Record</label>
    <nameField>
        <displayFormat>BPL{000000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Lounge Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>