GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Authorised__c.field-meta.xml
<CustomField>
    <fullName>Authorised__c</fullName>
    <formula>IF(Access_Granted__c || Override__c, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;,&quot;&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;&quot;))</formula>
    <label>Authorised</label>
    <type>Text</type>
</CustomField>