GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <formula>TEXT(Ticket__r.Class_of_Service__c)</formula>
    <label>Class of Service</label>
    <type>Text</type>
</CustomField>