GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <formula>Ticket__r.Country__c</formula>
    <label>Country of Residence</label>
    <type>Text</type>
</CustomField>