GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <formula>Ticket__r.Destination__c</formula>
    <label>Destination</label>
    <type>Text</type>
</CustomField>