GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <formula>Ticket__r.First_Name__c</formula>
    <label>First Name</label>
    <type>Text</type>
</CustomField>