GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <formula>Ticket__r.Last_Name__c</formula>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>