GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Lounge_Check_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Lounge_Check_In_Time__c</fullName>
    <label>Lounge Check In Time</label>
    <type>DateTime</type>
</CustomField>