GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <formula>Ticket__r.Origin__c</formula>
    <label>Origin</label>
    <type>Text</type>
</CustomField>