GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to force check in for passengers without Carte Blanche or BP Ticket. Needs specified reason.</inlineHelpText>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>