GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <inlineHelpText>Justification needed for check in Override</inlineHelpText>
    <label>Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>