GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Business Lounge Records</relationshipLabel>
    <relationshipName>Business_Lounge_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>