GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Ticket__r.Title__c</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>