GearsetPOC/force-app/main/default/objects/Business_Lounge_Record__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <formula>Ticket__r.Train__r.Name</formula>
    <label>Train</label>
    <type>Text</type>
</CustomField>